--- a/bts.html
+++ b/bts.html
@@ -5,7 +5,7 @@
   <meta charsret="utf-8">
 </head>
 <body>
-  <h1><a href="BTS.html">BTS</a></h1>
+  <h1><a href="bts.html">BTS</a></h1>
   <h3>BTS members</h3>
 <pl>
   <li><a href="rm.html">RM</a></li>
@@ -43,5 +43,6 @@
     </pl>
     <br>
     <a href="https://ibighit.com/bts/kor/" target="_blank" title="ibighit">공홈가기</a>
+  사진출처 <a href="https://www.facebook.com/media/set/?vanity=bangtan.official&set=a.4191063487575548" target="_blank" title="ibighit">https://www.facebook.com/media/set/?vanity=bangtan.official&set=a.4191063487575548</a>
 </body>
 </html>
