--- a/BTS.html
+++ b/BTS.html
@@ -5,7 +5,7 @@
   <meta charsret="utf-8">
 </head>
 <body>
-  <h1><a href=".html">BTS</a></h1>
+  <h1><a href="BTS.html">BTS</a></h1>
   <h3>BTS members</h3>
 <pl>
   <li><a href="rm.html">RM</a></li>
