--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li><a href="jk.html">JUNGKOOK</a></li>
   <br>
 </pl>
-<img src="bts1.jpg"><br>
+<img src="bts1.jpg" width="50%"><br>
 <ol>
   <li>데뷔 2013.06.13</li>
   <li>앨범</li>
